--- a/app/assets/stylesheets/entry.css.scss
+++ b/app/assets/stylesheets/entry.css.scss
@@ -1,11 +1,12 @@
 // Place all the styles related to the entry controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+$borders: 1px solid #E3E3E3;
 
 
 div.entry{
   margin: 20px 0;
-  border-bottom:1px solid #E3E3E3
+  border-top: $borders;
 }
 
 span.category{
