--- a/app/assets/stylesheets/entry.css.scss
+++ b/app/assets/stylesheets/entry.css.scss
@@ -7,6 +7,15 @@ $borders: 1px solid #E3E3E3;
 div.entry{
   margin: 20px 0;
   border-top: $borders;
+  float:left
+}
+
+div.all_categories{
+  float:right
+}
+
+div.all_categories ul li{
+  list-style-type: none
 }
 
 span.category{
